--- a/src/sass/abstracts/_variabels.scss
+++ b/src/sass/abstracts/_variabels.scss
@@ -4,4 +4,6 @@ $greenLinear:linear-gradient(88.88deg, #03AC0E 0%, rgba(23, 194, 34, 0.69) 99.99
 $greenLinear2: linear-gradient(57.21deg, #00E40F 0%, #017109 100%);
 $blue: #1577B4;
 $black:#292929;
+$white: #FAFAFA;
+$gray:#7A7A7A;
 
