--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,11 +1,45 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
-.btn__category {
-  background-color: red;
+.btn-primary {
+  border-radius: 100px;
+  width: 100%;
+  max-height: 37px;
+  padding: 8px;
+  font-size: 14px;
+  background-color: #03AC0E;
+  color: #FFFFFF;
+  border: none;
+}
+.btn-primary:hover {
+  background-color: #049C0E;
+  color: #FAFAFA;
+}
+
+.btn-secondary {
+  border-radius: 100px;
+  width: 100%;
+  max-height: 37px;
+  padding: 8px;
+  font-size: 14px;
+  background-color: #FAFAFA;
+  border: 1px solid #03AC0E;
+  color: #03AC0E;
+}
+.btn-secondary:hover {
+  background-color: #03AC0E;
+  color: #FAFAFA;
+}
+
+.btn-shadow {
+  box-shadow: 0px 8px 16px rgba(3, 172, 14, 0.24);
 }
 
 .header .icon__back {
   color: #03AC0E;
   font-size: 30px;
+  margin-right: 2px;
+  margin-top: 2px;
+  border: none;
+  background: transparent;
 }
 .header .icon__search {
   background-color: transparent;
@@ -17,12 +51,65 @@
   font-size: 12px;
   width: 73px;
   margin-bottom: 34px;
-  border: 1px solid rgba(0, 0, 0, 0);
   transition: all 200ms;
   cursor: pointer;
 }
 .category__card:hover {
   transform: scale(1.1);
+}
+
+.bycategory__container {
+  width: 104px;
+  margin-bottom: 30px;
+}
+.bycategory__container .bycategory {
+  cursor: pointer;
+}
+.bycategory__container .bycategory:hover .bycategory__img {
+  transform: scale(1.1);
+}
+.bycategory__container .bycategory__img {
+  width: 100%;
+  height: 104px;
+  overflow: hidden;
+  border: 1px solid #EBEBEB;
+  border-radius: 8px;
+  transition: all 200ms;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bycategory__container .bycategory__title__container {
+  margin-top: 16px;
+  width: 104px;
+  height: 36px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  color: #292929;
+  font-size: 12px;
+  line-height: 18px;
+  white-space: nowrap;
+}
+.bycategory__container .bycategory__price {
+  font-size: 14px;
+  margin-bottom: 16px;
+  display: block;
+}
+
+.detail__product__category {
+  display: inline-block;
+  padding: 4px 12px 4px 12px;
+  background-color: #EBEBEB;
+  border-radius: 100px;
+  color: #7A7A7A;
+  font-size: 12px;
+  font-weight: 600;
+}
+.detail__product__description {
+  font-weight: 400;
+  font-size: 12px;
+  color: #7A7A7A;
 }
 
 * {
@@ -45,4 +132,9 @@
 
 .fw400 {
   font-weight: 400;
+}
+
+.fw600-fs14 {
+  font-weight: 600;
+  font-size: 14px;
 }/*# sourceMappingURL=main.css.map */
