--- a/src/sass/components/_input.scss
+++ b/src/sass/components/_input.scss
@@ -22,17 +22,6 @@
         pointer-events: none;
     }
 
-    &:focus, &:valid{
-        border: 1px solid $primary;
-    }
-
-    &:focus ~ &__label, &:valid ~ &__label{
-        top: 8px;
-        left: 4px;
-        font-weight: 600;
-        font-size: 10px;
-    }
-
     &__icon{
         position:absolute;
         left: 20px;
@@ -40,6 +29,16 @@
         padding:10px 10px;
         font-size: 12px;
     }
+    &__float ~ &__label{
+        top: 8px;
+        left: 4px;
+        font-weight: 600;
+        font-size: 10px;
+    }
+    &__error{
+        border: 1px solid red;
+    }
+
 }
 
 .input__otp{
