--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -77,21 +77,21 @@
   color: #7A7A7A;
   pointer-events: none;
 }
-.input:focus, .input:valid {
-  border: 1px solid #03AC0E;
-}
-.input:focus ~ .input__label, .input:valid ~ .input__label {
-  top: 8px;
-  left: 4px;
-  font-weight: 600;
-  font-size: 10px;
-}
 .input__icon {
   position: absolute;
   left: 20px;
   top: 14px;
   padding: 10px 10px;
   font-size: 12px;
+}
+.input__float ~ .input__label {
+  top: 8px;
+  left: 4px;
+  font-weight: 600;
+  font-size: 10px;
+}
+.input__error {
+  border: 1px solid red;
 }
 
 .input__otp {
@@ -219,4 +219,12 @@
 
 .fs14 {
   font-size: 14px;
+}
+
+.fs10 {
+  font-size: 10px;
+}
+
+.err-color {
+  color: #F62845;
 }/*# sourceMappingURL=main.css.map */
