--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -12,7 +12,7 @@
     @include button-primary;
     background-color: $primary;
     color: #FFFFFF;
-    border: none;
+    border: 1px solid transparent;
 
     &:hover{
         @include mixin.btn-hover($green, $white)
@@ -33,4 +33,8 @@
 
 .btn-shadow{
     box-shadow: 0px 8px 16px rgba(3, 172, 14, 0.24);
+}
+
+.fs13{
+    font-size: 14px;
 }
